--- a/samples/msal-angular-v3-samples/angular17-sample-app/src/app/app.component.html
+++ b/samples/msal-angular-v3-samples/angular17-sample-app/src/app/app.component.html
@@ -20,5 +20,5 @@
 </mat-toolbar>
 <div class="container">
   <!--This is to avoid reload during acquireTokenSilent() because of hidden iframe -->
-  <router-outlet *ngIf="!isIframe"></router-outlet>
+  <!-- <router-outlet *ngIf="!isIframe"></router-outlet> -->
 </div>
