--- a/samples/msal-angular-v3-samples/angular17-sample-app/src/app/app.component.html
+++ b/samples/msal-angular-v3-samples/angular17-sample-app/src/app/app.component.html
@@ -5,13 +5,17 @@
 
   <a mat-button [routerLink]="['profile']">Profile</a>
 
-  <button mat-raised-button [matMenuTriggerFor]="loginMenu" *ngIf="!loginDisplay">Login</button>
+  @if (!loginDisplay) {
+  <button mat-raised-button [matMenuTriggerFor]="loginMenu">Login</button>
+  }
   <mat-menu #loginMenu="matMenu">
     <button mat-menu-item (click)="loginRedirect()">Login using Redirect</button>
     <button mat-menu-item (click)="loginPopup()">Login using Popup</button>
   </mat-menu>
 
-  <button mat-raised-button [matMenuTriggerFor]="logoutMenu" *ngIf="loginDisplay">Logout</button>
+  @if (loginDisplay) {
+  <button mat-raised-button [matMenuTriggerFor]="logoutMenu">Logout</button>
+  }
   <mat-menu #logoutMenu="matMenu">
     <button mat-menu-item (click)="logout()">Logout using Redirect</button>
     <button mat-menu-item (click)="logout(true)">Logout using Popup</button>
@@ -19,6 +23,5 @@
 
 </mat-toolbar>
 <div class="container">
-  <!--This is to avoid reload during acquireTokenSilent() because of hidden iframe -->
-  <!-- <router-outlet *ngIf="!isIframe"></router-outlet> -->
+  <router-outlet></router-outlet>
 </div>
